test/expressions/vass/cast-to-non-type-3.good
cast-to-non-type-3.chpl:3: error: illegal cast to non-type
cast-to-non-type-3.chpl:3: error: illegal cast from real(64) to int(64)
