test/expressions/vass/cast-to-non-type-3.chpl
// Should issue just one error for "illegal cast to non-type"

var i = 3.14 : 10;
